<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
...
            android:text="Your Emotion State (Required)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEmotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/dropdown_background"
            android:hint="Choose from the dropdown box"
            android:padding="12dp" />
...
            android:text="What was the reason? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textMultiLine"
            android:lines="1"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAlone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:text="Alone"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioTwoSeveral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Two or Several"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioCrowd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="A Crowd"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="None"
                android:textColor="#ffafae"
...
            android:text="What was the social situation? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSocialSituation"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textMultiLine"
            android:lines="3"
...
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPublicStatus"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="Public"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioPrivateStatus"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="Private"
                android:textColor="#ffafae"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Cancel"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Confirm"
...
